--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="container">
-        <div>
+        <div class="footer-address__wrapper">
           <a class="footer__logo logo" href=""
             >Web<span class="logo__text logo__text--light">Studio</span></a
           >
@@ -710,10 +710,10 @@
     
       <ul class="mobile-contacts list">
         <li class="mobile-contacts-item">
-          <a href="" class="mobile-contacts-link link">+38 096 111 11 11</a>
+          <a href="" class="mobile-tel-link link">+38 096 111 11 11</a>
         </li>
         <li class="mobile-contacts-item">
-          <a href="" class="mobile-contacts-link link">info@devstudio.com</a>
+          <a href="" class="mobile-mail-link link">info@devstudio.com</a>
         </li>
       </ul>
     
