--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
             <a
               href="mailto:info@devstudio.com"
               class="header__mail link nav__link"
-              ><svg class="header__icon" width="16" height="12">
+              ><svg class="header__icon-mail" width="16" height="12">
                 <use href="./img/icons.svg.svg#icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
           <li>
             <a href="tel:+380961111111" class="header__tel link nav__link"
-              ><svg class="header__icon" width="10" height="16">
+              ><svg class="header__icon-tel" width="10" height="16">
                 <use href="./img/icons.svg.svg#icon-smartphone"></use></svg
               >+38 096 111 11 11</a
             >
