--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
     
       <ul class="mobile-menu">
         <li class="mobile-menu-item">
-          <a class="mobile-menu-link link" href="">Студія</a>
+          <a class="mobile-menu-link link current" href="">Студія</a>
         </li>
         <li class="mobile-menu-item">
           <a class="mobile-menu-link link" href="">Портфоліо</a>
