--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
           <ul class="works__list list">
             <li class="works__item">
               <img
+              srcset=".\img\gallery\img_l@1x.jpg 1x, .\img\gallery\img_l@2x.jpg 2x"
                 src="./img/gallery/gallery-img-1.jpg"
                 alt="computer work"
                 width="370"
@@ -153,6 +154,7 @@
             </li>
             <li class="works__item">
               <img
+               srcset=".\img\gallery\img_l@1x-1.jpg 1x, .\img\gallery\img_l@2x-1.jpg 2x"
                 src="./img/gallery/gallery-img-2.jpg"
                 alt="computer work"
                 width="370"
@@ -164,6 +166,7 @@
             </li>
             <li class="works__item">
               <img
+              srcset=".\img\gallery\img_l@1x-2.jpg 1x, .\img\gallery\img_l@2x-2.jpg 2x"
                 src="./img/gallery/gallery-img-3.jpg"
                 alt="computer work"
                 width="370"
@@ -507,7 +510,7 @@
             >Web<span class="logo__text logo__text--light">Studio</span></a
           >
           <address class="footer__address">
-            <ul class="list">
+            <ul class="address-list list">
               <li class="footer__list">
                 <a
                   href="https://goo.gl/maps/xZHKxqKx7CFX3MVU"
