--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
           </ul>
         </nav>
         <ul class="header__list list">
-          <li>
+          <li class="header__item">
             <a
               href="mailto:info@devstudio.com"
-              class="header__mail link nav__link"
+              class="header__contact link nav__link"
               ><svg class="header__icon-mail" width="16" height="12">
                 <use href="./img/icons.svg.svg#icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
-          <li>
-            <a href="tel:+380961111111" class="header__tel link nav__link"
+          <li class="header__item">
+            <a href="tel:+380961111111" class="header__contact link nav__link"
               ><svg class="header__icon-tel" width="10" height="16">
                 <use href="./img/icons.svg.svg#icon-smartphone"></use></svg
               >+38 096 111 11 11</a
@@ -136,7 +136,7 @@
         </div>
       </section>
       <!-- Works section -->
-      <section class="works section">
+      <section class="works section section--no_padding">
         <div class="container">
           <h2 class="works__title">Чим ми займаємося</h2>
           <ul class="works__list list">
@@ -503,92 +503,63 @@
       </section>
     </main>
     <!-- Footer -->
-    <footer class="footer">
+    <footer class="footer section">
       <div class="container">
-        <div class="footer-address__wrapper">
-          <a class="footer__logo logo" href=""
-            >Web<span class="logo__text logo__text--light">Studio</span></a
-          >
-          <address class="footer__address">
-            <ul class="address-list list">
-              <li class="footer__list">
-                <a
-                  href="https://goo.gl/maps/xZHKxqKx7CFX3MVU"
-                  class="link footer__direction"
-                  target="_blank"
-                  rel="noopener noreferrer nofollow"
-                  >м. Київ, пр-т Лесі Українки, 26</a
-                >
+        <div class="page-footer__container--tablet">
+          <div class="footer-address__wrapper">
+            <a class="footer__logo logo" href="">Web<span class="logo__text logo__text--light">Studio</span></a>
+            <address class="footer__address">
+              <ul class="address-list list">
+                <li class="footer__list">
+                  <a href="https://goo.gl/maps/xZHKxqKx7CFX3MVU" class="link footer__direction" target="_blank"
+                    rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a>
+                </li>
+                <li class="footer__list">
+                  <a href="mailto:info@devstudio.com" class="link footer__mail">info@devstudio.com</a>
+                </li>
+                <li class="footer__list">
+                  <a href="tel:+380961111111" class="link footer__tel">+38 096 111 11 11</a>
+                </li>
+              </ul>
+            </address>
+          </div>
+          <div class="footer__wrapper">
+            <h3 class="footer__title">приєднуйтесь</h3>
+            <ul class="footer-socials__list list">
+              <li class="footer-socials__item">
+                <a class="footer-socials__link link" href="https://instagram.com" target="_blank" rel="noopener noreferrer"
+                  aria-label="Instagram icon">
+                  <svg class="footer-socials__icon" width="20" height="20">
+                    <use href="./img/icons.svg.svg#icon-instagram"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="footer__list">
-                <a href="mailto:info@devstudio.com" class="link footer__mail"
-                  >info@devstudio.com</a
-                >
+              <li class="footer-socials__item">
+                <a class="footer-socials__link link" href="https://twitter.com" target="_blank" rel="noopener noreferrer"
+                  aria-label="Twitter icon">
+                  <svg class="footer-socials__icon" width="20" height="20">
+                    <use href="./img/icons.svg.svg#icon-twitter"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="footer__list">
-                <a href="tel:+380961111111" class="link footer__tel"
-                  >+38 096 111 11 11</a
-                >
+              <li class="footer-socials__item">
+                <a class="footer-socials__link link" href="https://facebook.com" target="_blank" rel="noopener noreferrer"
+                  aria-label="Facebook icon">
+                  <svg class="footer-socials__icon" width="20" height="20">
+                    <use href="./img/icons.svg.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-socials__item">
+                <a class="footer-socials__link link" href="https://linkedin.com" target="_blank" rel="noopener noreferrer"
+                  aria-label="Linkedin icon">
+                  <svg class="footer-socials__icon" width="20" height="20">
+                    <use href="./img/icons.svg.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
-          </address>
-        </div>
-        <div class="footer__wrapper">
-          <h3 class="footer__title">приєднуйтесь</h3>
-          <ul class="footer-socials__list list">
-            <li class="footer-socials__item">
-              <a
-                class="footer-socials__link link"
-                href="https://instagram.com"
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="Instagram icon"
-              >
-                <svg class="footer-socials__icon" width="20" height="20">
-                  <use href="./img/icons.svg.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-socials__item">
-              <a
-                class="footer-socials__link link"
-                href="https://twitter.com"
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="Twitter icon"
-              >
-                <svg class="footer-socials__icon" width="20" height="20">
-                  <use href="./img/icons.svg.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-socials__item">
-              <a
-                class="footer-socials__link link"
-                href="https://facebook.com"
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="Facebook icon"
-              >
-                <svg class="footer-socials__icon" width="20" height="20">
-                  <use href="./img/icons.svg.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-socials__item">
-              <a
-                class="footer-socials__link link"
-                href="https://linkedin.com"
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="Linkedin icon"
-              >
-                <svg class="footer-socials__icon" width="20" height="20">
-                  <use href="./img/icons.svg.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+          </div>
         </div>
         <div class="mailing-list__container">
           <p class="mailing-list__title">Підпишіться на розсилку</p>
