--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                   .\img\gallery\img_l@1x.jpg 1x,
                   .\img\gallery\img_l@2x.jpg 2x
                 "
-                src="./img/gallery/gallery-img-1.jpg"
+                src=".\img\gallery\gallery-img-1.jpg"
                 alt="computer work"
                 width="370"
                 height="294"
@@ -169,7 +169,7 @@
                   .\img\gallery\img_l@1x-1.jpg 1x,
                   .\img\gallery\img_l@2x-1.jpg 2x
                 "
-                src="./img/gallery/gallery-img-2.jpg"
+                src=".\img\gallery\gallery-img-2.jpg"
                 alt="computer work"
                 width="370"
                 height="294"
@@ -185,7 +185,7 @@
                   .\img\gallery\img_l@1x-2.jpg 1x,
                   .\img\gallery\img_l@2x-2.jpg 2x
                 "
-                src="./img/gallery/gallery-img-3.jpg"
+                src=".\img\gallery\gallery-img-3.jpg"
                 alt="computer work"
                 width="370"
                 height="294"
@@ -206,53 +206,60 @@
             <li class="staff__card">
               <picture>
                 <source
+                  srcset="
+                    .\img\team\img_l@1x.webp 270w,
+                    .\img\team\img_l@2x.webp 540w
+                  "
                   media="(min-width: 1200px)"
-                  srcset="
-                    ./img\team\img_l@1x.webp 1x,
-                    img\team\img_l@2x.webp   2x
-                  "
-                  type="img\webp"
+                  sizes="(min-width: 1200px) 270px"
+                  type="image/webp"
                 />
                 <source
-                  media="(min-width: 768px)"
                   srcset="
-                    ./img\team\img_m@1x.webp 1x,
-                    img\team\img_m@2x.webp   2x
+                    .\img\team\img_l@1x.jpg 270w,
+                    .\img\team\img_l@2x.jpg 540w
                   "
-                  type="img\webp"
-                />
-                <source
-                  media="(max-width: 767px)"
-                  srcset="
-                    ./img\team\img_s@1x.webp 1x,
-                    img\team\img_s@2x.webp   2x
-                  "
-                  type="img\webp"
-                />
-
-                <source
                   media="(min-width: 1200px)"
-                  srcset="./img\team\img_l@1x.jpg 1x, img\team\img_l@2x.jpg 2x"
-                  type="img\jpg"
+                  sizes="(min-width: 1200px) 270px"
+                  type="image/jpeg"
                 />
                 <source
+                  srcset="
+                    .\img\team\img_m@1x.webp 354w,
+                    .\img\team\img_m@2x.webp 708w
+                  "
                   media="(min-width: 768px)"
-                  srcset="./img\team\img_m@1x.jpg 1x, img\team\img_m@2x.jpg 2x"
-                  type="img\jpg"
+                  sizes="(min-width: 768px) 354px"
+                  type="image/webp"
                 />
                 <source
+                  srcset="
+                    .\img\team\img_m@1x.jpg 354w,
+                    .\img\team\img_m@2x.jpg 708w
+                  "
+                  media="(min-width: 768px)"
+                  sizes="(min-width: 768px) 354px"
+                  type="image/jpeg"
+                />
+                <source
+                  srcset="
+                    .\img\team\img_s@1x.webp 450w,
+                    .\img\team\img_s@2x.webp 900w
+                  "
                   media="(max-width: 767px)"
-                  srcset="./img\team\img_s@1x.jpg 1x, img\team\img_s@2x.jpg 2x"
-                  type="img\jpg"
+                  sizes="(min-width: 480px) 450px, 100vw"
+                  type="image/webp"
                 />
-
-                <img
-                  src="./img\team\img_s@1x.jpg"
-                  alt="ihor"
-                  width="450"
-                  height="460"
-                  loading="lazy"
+                <source
+                  srcset="
+                    .\img\team\img_s@1x.jpg 450w,
+                    .\img\team\img_s@2x.jpg 900w
+                  "
+                  media="(max-width: 767px)"
+                  sizes="(min-width: 480px) 450px, 100vw"
+                  type="image/jpeg"
                 />
+                <img src=".\img\team\img_s@1x.jpg " alt="Ihor" loading="lazy" />
               </picture>
 
               <div class="staff__wrapper">
@@ -317,60 +324,62 @@
             <li class="staff__card">
               <picture>
                 <source
+                  srcset="
+                    .\img\team\img_l@1x-1.webp 270w,
+                    .\img\team\img_l@2x-1.webp 540w
+                  "
                   media="(min-width: 1200px)"
-                  srcset="
-                    ./img\team\img_l@1x-1.webp 1x,
-                    img\team\img_l@2x-1.webp   2x
-                  "
-                  type="img.webp"
+                  sizes="(min-width: 1200px) 270px"
+                  type="image/webp"
                 />
                 <source
-                  media="(min-width: 768px)"
                   srcset="
-                    ./img\team\img_m@1x-1.webp 1x,
-                    img\team\img_m@2x-1.webp   2x
+                    .\img\team\img_l@1x-1.jpg 270w,
+                    .\img\team\img_l@2x-1.jpg 540w
                   "
-                  type="img.webp"
-                />
-                <source
-                  media="(max-width: 767px)"
-                  srcset="
-                    ./img\team\img_s@1x-1.webp 1x,
-                    img\team\img_s@2x-1.webp   2x
-                  "
-                  type="img.webp"
-                />
-
-                <source
                   media="(min-width: 1200px)"
-                  srcset="
-                    ./img\team\img_l@1x-1.jpg 1x,
-                    img\team\img_l@2x-1.jpg   2x
-                  "
-                  type="img.jpg"
+                  sizes="(min-width: 1200px) 270px"
+                  type="image/jpeg"
                 />
                 <source
+                  srcset="
+                    .\img\team\img_m@1x-1.webp 354w,
+                    .\img\team\img_m@2x-1.webp 708w
+                  "
                   media="(min-width: 768px)"
-                  srcset="
-                    ./img\team\img_m@1x-1.jpg 1x,
-                    img\team\img_m@2x-1.jpg   2x
-                  "
-                  type="img.jpg"
+                  sizes="(min-width: 768px) 354px"
+                  type="image/webp"
                 />
                 <source
-                  media="(max-width: 767px)"
                   srcset="
-                    ./img\team\img_s@1x-1.jpg 1x,
-                    img\team\img_s@2x-1.jpg   2x
+                    .\img\team\img_m@1x-1.jpg 354w,
+                    .\img\team\img_m@2x-1.jpg 708w
                   "
-                  type="img.jpg"
+                  media="(min-width: 768px)"
+                  sizes="(min-width: 768px) 354px"
+                  type="image/jpeg"
                 />
-
+                <source
+                  srcset="
+                    .\img\team\img_s@1x-1.webp 450w,
+                    .\img\team\img_s@2x-1.webp 900w
+                  "
+                  media="(max-width: 767px)"
+                  sizes="(min-width: 480px) 450px, 100vw"
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    .\img\team\img_s@1x-1.jpg 450w,
+                    .\img\team\img_s@2x-1.jpg 900w
+                  "
+                  media="(max-width: 767px)"
+                  sizes="(min-width: 480px) 450px, 100vw"
+                  type="image/jpeg"
+                />
                 <img
-                  src="./img\team\img_s@1x-1.jpg"
-                  alt="ihor"
-                  width="450"
-                  height="460"
+                  src=".\img\team\img_s@1x-1.jpg "
+                  alt="Olga"
                   loading="lazy"
                 />
               </picture>
@@ -437,60 +446,62 @@
             <li class="staff__card">
               <picture>
                 <source
+                  srcset="
+                    .\img\team\img_l@1x-2.webp 270w,
+                    .\img\team\img_l@2x-2.webp 540w
+                  "
                   media="(min-width: 1200px)"
-                  srcset="
-                    ./img\team\img_l@1x-2.webp 1x,
-                    img\team\img_l@2x-2.webp   2x
-                  "
-                  type="img.webp"
+                  sizes="(min-width: 1200px) 270px"
+                  type="image/webp"
                 />
                 <source
-                  media="(min-width: 768px)"
                   srcset="
-                    ./img\team\img_m@1x-2.webp 1x,
-                    img\team\img_m@2x-2.webp   2x
+                    .\img\team\img_l@1x-2.jpg 270w,
+                    .\img\team\img_l@2x-2.jpg 540w
                   "
-                  type="img.webp"
-                />
-                <source
-                  media="(max-width: 767px)"
-                  srcset="
-                    ./img\team\img_s@1x-2.webp 1x,
-                    img\team\img_s@2x-2.webp   2x
-                  "
-                  type="img.webp"
-                />
-
-                <source
                   media="(min-width: 1200px)"
-                  srcset="
-                    ./img\team\img_l@1x-2.jpg 1x,
-                    img\team\img_l@2x-2.jpg   2x
-                  "
-                  type="img.jpg"
+                  sizes="(min-width: 1200px) 270px"
+                  type="image/jpeg"
                 />
                 <source
+                  srcset="
+                    .\img\team\img_m@1x-2.webp 354w,
+                    .\img\team\img_m@2x-2.webp 708w
+                  "
                   media="(min-width: 768px)"
-                  srcset="
-                    ./img\team\img_m@1x-2.jpg 1x,
-                    img\team\img_m@2x-2.jpg   2x
-                  "
-                  type="img.jpg"
+                  sizes="(min-width: 768px) 354px"
+                  type="image/webp"
                 />
                 <source
-                  media="(max-width: 767px)"
                   srcset="
-                    ./img\team\img_s@1x-2.jpg 1x,
-                    img\team\img_s@2x-2.jpg   2x
+                    .\img\team\img_m@1x-2.jpg 354w,
+                    .\img\team\img_m@2x-2.jpg 708w
                   "
-                  type="img.jpg"
+                  media="(min-width: 768px)"
+                  sizes="(min-width: 768px) 354px"
+                  type="image/jpeg"
                 />
-
+                <source
+                  srcset="
+                    .\img\team\img_s@1x-2.webp 450w,
+                    .\img\team\img_s@2x-2.webp 900w
+                  "
+                  media="(max-width: 767px)"
+                  sizes="(min-width: 480px) 450px, 100vw"
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    .\img\team\img_s@1x-2.jpg 450w,
+                    .\img\team\img_s@2x-2.jpg 900w
+                  "
+                  media="(max-width: 767px)"
+                  sizes="(min-width: 480px) 450px, 100vw"
+                  type="image/jpeg"
+                />
                 <img
-                  src="./img\team\img_s@1x-2.jpg"
-                  alt="ihor"
-                  width="450"
-                  height="460"
+                  src=".\img\team\img_s@1x-2.jpg "
+                  alt="Mukola"
                   loading="lazy"
                 />
               </picture>
@@ -557,64 +568,65 @@
             <li class="staff__card">
               <picture>
                 <source
+                  srcset="
+                    .\img\team\img_l@1x-3.webp 270w,
+                    .\img\team\img_l@2x-3.webp 540w
+                  "
                   media="(min-width: 1200px)"
-                  srcset="
-                    ./img\team\img_l@1x-3.webp 1x,
-                    img\team\img_l@2x-3.webp   2x
-                  "
-                  type="img.webp"
+                  sizes="(min-width: 1200px) 270px"
+                  type="image/webp"
                 />
                 <source
-                  media="(min-width: 768px)"
                   srcset="
-                    ./img\team\img_m@1x-3.webp 1x,
-                    img\team\img_m@2x-3.webp   2x
+                    .\img\team\img_l@1x-3.jpg 270w,
+                    .\img\team\img_l@2x-3.jpg 540w
                   "
-                  type="img.webp"
-                />
-                <source
-                  media="(max-width: 767px)"
-                  srcset="
-                    ./img\team\img_s@1x-3.webp 1x,
-                    img\team\img_s@2x-3.webp   2x
-                  "
-                  type="img.webp"
-                />
-
-                <source
                   media="(min-width: 1200px)"
-                  srcset="
-                    ./img\team\img_l@1x-3.jpg 1x,
-                    img\team\img_l@2x-3.jpg   2x
-                  "
-                  type="img.jpg"
+                  sizes="(min-width: 1200px) 270px"
+                  type="image/jpeg"
                 />
                 <source
+                  srcset="
+                    .\img\team\img_m@1x-3.webp 354w,
+                    .\img\team\img_m@2x-3.webp 708w
+                  "
                   media="(min-width: 768px)"
-                  srcset="
-                    ./img\team\img_m@1x-3.jpg 1x,
-                    img\team\img_m@2x-3.jpg   2x
-                  "
-                  type="img.jpg"
+                  sizes="(min-width: 768px) 354px"
+                  type="image/webp"
                 />
                 <source
-                  media="(max-width: 767px)"
                   srcset="
-                    ./img\team\img_s@1x-3.jpg 1x,
-                    img\team\img_s@2x-3.jpg   2x
+                    .\img\team\img_m@1x-3.jpg 354w,
+                    .\img\team\img_m@2x-3.jpg 708w
                   "
-                  type="img.jpg"
+                  media="(min-width: 768px)"
+                  sizes="(min-width: 768px) 354px"
+                  type="image/jpeg"
                 />
-
+                <source
+                  srcset="
+                    .\img\team\img_s@1x-3.webp 450w,
+                    .\img\team\img_s@2x-3.webp 900w
+                  "
+                  media="(max-width: 767px)"
+                  sizes="(min-width: 480px) 450px, 100vw"
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    .\img\team\img_s@1x-3.jpg 450w,
+                    .\img\team\img_s@2x-3.jpg 900w
+                  "
+                  media="(max-width: 767px)"
+                  sizes="(min-width: 480px) 450px, 100vw"
+                  type="image/jpeg"
+                />
                 <img
-                  src="./img\team\img_s@1x-3.jpg"
-                  alt="ihor"
-                  width="450"
-                  height="460"
+                  src=".\img\team\img_s@1x-3.jpg "
+                  alt="Muhaylo"
                   loading="lazy"
                 />
               </picture>
-
               <div class="staff__wrapper">
                 <h3 class="staff__name">Михайло Єрмаков</h3>
                 <p class="staff__profession">UI Designer</p>
@@ -904,7 +916,7 @@
             <input
               class="modal-form-checkbox"
               type="checkbox"
-              name=""
+              name="modal-form-agreement"
               id="user_agreement"
             />
             <label class="modal-form-agreement-desc" for="user_agreement">
