--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
             <li class="works__item">
               <img
                 srcset="
-                  .\img\gallery\img_l@1x.jpg 1x,
-                  .\img\gallery\img_l@2x.jpg 2x
+                  ./img/gallery/img_l@1x.jpg 1x,
+                  ./img/gallery/img_l@2x.jpg 2x
                 "
-                src=".\img\gallery\gallery-img-1.jpg"
+                src="./img/gallery/gallery-img-1.jpg"
                 alt="computer work"
                 width="370"
                 height="294"
@@ -166,10 +166,10 @@
             <li class="works__item">
               <img
                 srcset="
-                  .\img\gallery\img_l@1x-1.jpg 1x,
-                  .\img\gallery\img_l@2x-1.jpg 2x
+                  ./img/gallery/img_l@1x-1.jpg 1x,
+                  ./img/gallery/img_l@2x-1.jpg 2x
                 "
-                src=".\img\gallery\gallery-img-2.jpg"
+                src="./img/gallery/gallery-img-2.jpg"
                 alt="computer work"
                 width="370"
                 height="294"
@@ -182,10 +182,10 @@
             <li class="works__item">
               <img
                 srcset="
-                  .\img\gallery\img_l@1x-2.jpg 1x,
-                  .\img\gallery\img_l@2x-2.jpg 2x
+                  ./img/gallery/img_l@1x-2.jpg 1x,
+                  ./img/gallery/img_l@2x-2.jpg 2x
                 "
-                src=".\img\gallery\gallery-img-3.jpg"
+                src="./img/gallery/gallery-img-3.jpg"
                 alt="computer work"
                 width="370"
                 height="294"
@@ -207,8 +207,8 @@
               <picture>
                 <source
                   srcset="
-                    .\img\team\img_l@1x.webp 270w,
-                    .\img\team\img_l@2x.webp 540w
+                    ./img/team/img_l@1x.webp 270w,
+                    ./img/team/img_l@2x.webp 540w
                   "
                   media="(min-width: 1200px)"
                   sizes="(min-width: 1200px) 270px"
@@ -216,8 +216,8 @@
                 />
                 <source
                   srcset="
-                    .\img\team\img_l@1x.jpg 270w,
-                    .\img\team\img_l@2x.jpg 540w
+                    ./img/team/img_l@1x.jpg 270w,
+                    ./img/team/img_l@2x.jpg 540w
                   "
                   media="(min-width: 1200px)"
                   sizes="(min-width: 1200px) 270px"
@@ -225,8 +225,8 @@
                 />
                 <source
                   srcset="
-                    .\img\team\img_m@1x.webp 354w,
-                    .\img\team\img_m@2x.webp 708w
+                    ./img/team/img_m@1x.webp 354w,
+                    ./img/team/img_m@2x.webp 708w
                   "
                   media="(min-width: 768px)"
                   sizes="(min-width: 768px) 354px"
@@ -234,8 +234,8 @@
                 />
                 <source
                   srcset="
-                    .\img\team\img_m@1x.jpg 354w,
-                    .\img\team\img_m@2x.jpg 708w
+                    ./img/team/img_m@1x.jpg 354w,
+                    ./img/team/img_m@2x.jpg 708w
                   "
                   media="(min-width: 768px)"
                   sizes="(min-width: 768px) 354px"
@@ -243,8 +243,8 @@
                 />
                 <source
                   srcset="
-                    .\img\team\img_s@1x.webp 450w,
-                    .\img\team\img_s@2x.webp 900w
+                    ./img/team/img_s@1x.webp 450w,
+                    ./img/team/img_s@2x.webp 900w
                   "
                   media="(max-width: 767px)"
                   sizes="(min-width: 480px) 450px, 100vw"
@@ -252,14 +252,14 @@
                 />
                 <source
                   srcset="
-                    .\img\team\img_s@1x.jpg 450w,
-                    .\img\team\img_s@2x.jpg 900w
+                    ./img/team/img_s@1x.jpg 450w,
+                    ./img/team/img_s@2x.jpg 900w
                   "
                   media="(max-width: 767px)"
                   sizes="(min-width: 480px) 450px, 100vw"
                   type="image/jpeg"
                 />
-                <img src=".\img\team\img_s@1x.jpg " alt="Ihor" loading="lazy" />
+                <img src="./img/team/img_s@1x.jpg " alt="Ihor" loading="lazy" />
               </picture>
 
               <div class="staff__wrapper">
@@ -325,8 +325,8 @@
               <picture>
                 <source
                   srcset="
-                    .\img\team\img_l@1x-1.webp 270w,
-                    .\img\team\img_l@2x-1.webp 540w
+                    ./img/team/img_l@1x-1.webp 270w,
+                    ./img/team/img_l@2x-1.webp 540w
                   "
                   media="(min-width: 1200px)"
                   sizes="(min-width: 1200px) 270px"
@@ -334,8 +334,8 @@
                 />
                 <source
                   srcset="
-                    .\img\team\img_l@1x-1.jpg 270w,
-                    .\img\team\img_l@2x-1.jpg 540w
+                    ./img/team/img_l@1x-1.jpg 270w,
+                    ./img/team/img_l@2x-1.jpg 540w
                   "
                   media="(min-width: 1200px)"
                   sizes="(min-width: 1200px) 270px"
@@ -343,8 +343,8 @@
                 />
                 <source
                   srcset="
-                    .\img\team\img_m@1x-1.webp 354w,
-                    .\img\team\img_m@2x-1.webp 708w
+                    ./img/team/img_m@1x-1.webp 354w,
+                    ./img/team/img_m@2x-1.webp 708w
                   "
                   media="(min-width: 768px)"
                   sizes="(min-width: 768px) 354px"
@@ -352,8 +352,8 @@
                 />
                 <source
                   srcset="
-                    .\img\team\img_m@1x-1.jpg 354w,
-                    .\img\team\img_m@2x-1.jpg 708w
+                    ./img/team/img_m@1x-1.jpg 354w,
+                    ./img/team/img_m@2x-1.jpg 708w
                   "
                   media="(min-width: 768px)"
                   sizes="(min-width: 768px) 354px"
@@ -361,8 +361,8 @@
                 />
                 <source
                   srcset="
-                    .\img\team\img_s@1x-1.webp 450w,
-                    .\img\team\img_s@2x-1.webp 900w
+                    ./img/team/img_s@1x-1.webp 450w,
+                    ./img/team/img_s@2x-1.webp 900w
                   "
                   media="(max-width: 767px)"
                   sizes="(min-width: 480px) 450px, 100vw"
@@ -370,15 +370,15 @@
                 />
                 <source
                   srcset="
-                    .\img\team\img_s@1x-1.jpg 450w,
-                    .\img\team\img_s@2x-1.jpg 900w
+                    ./img/team/img_s@1x-1.jpg 450w,
+                    ./img/team/img_s@2x-1.jpg 900w
                   "
                   media="(max-width: 767px)"
                   sizes="(min-width: 480px) 450px, 100vw"
                   type="image/jpeg"
                 />
                 <img
-                  src=".\img\team\img_s@1x-1.jpg "
+                  src="./img/team/img_s@1x-1.jpg "
                   alt="Olga"
                   loading="lazy"
                 />
@@ -447,8 +447,8 @@
               <picture>
                 <source
                   srcset="
-                    .\img\team\img_l@1x-2.webp 270w,
-                    .\img\team\img_l@2x-2.webp 540w
+                    ./img/team/img_l@1x-2.webp 270w,
+                    ./img/team/img_l@2x-2.webp 540w
                   "
                   media="(min-width: 1200px)"
                   sizes="(min-width: 1200px) 270px"
@@ -456,8 +456,8 @@
                 />
                 <source
                   srcset="
-                    .\img\team\img_l@1x-2.jpg 270w,
-                    .\img\team\img_l@2x-2.jpg 540w
+                    ./img/team/img_l@1x-2.jpg 270w,
+                    ./img/team/img_l@2x-2.jpg 540w
                   "
                   media="(min-width: 1200px)"
                   sizes="(min-width: 1200px) 270px"
@@ -465,8 +465,8 @@
                 />
                 <source
                   srcset="
-                    .\img\team\img_m@1x-2.webp 354w,
-                    .\img\team\img_m@2x-2.webp 708w
+                    ./img/team/img_m@1x-2.webp 354w,
+                    ./img/team/img_m@2x-2.webp 708w
                   "
                   media="(min-width: 768px)"
                   sizes="(min-width: 768px) 354px"
@@ -474,8 +474,8 @@
                 />
                 <source
                   srcset="
-                    .\img\team\img_m@1x-2.jpg 354w,
-                    .\img\team\img_m@2x-2.jpg 708w
+                    ./img/team/img_m@1x-2.jpg 354w,
+                    ./img/team/img_m@2x-2.jpg 708w
                   "
                   media="(min-width: 768px)"
                   sizes="(min-width: 768px) 354px"
@@ -483,8 +483,8 @@
                 />
                 <source
                   srcset="
-                    .\img\team\img_s@1x-2.webp 450w,
-                    .\img\team\img_s@2x-2.webp 900w
+                    ./img/team/img_s@1x-2.webp 450w,
+                    ./img/team/img_s@2x-2.webp 900w
                   "
                   media="(max-width: 767px)"
                   sizes="(min-width: 480px) 450px, 100vw"
@@ -492,15 +492,15 @@
                 />
                 <source
                   srcset="
-                    .\img\team\img_s@1x-2.jpg 450w,
-                    .\img\team\img_s@2x-2.jpg 900w
+                    ./img/team/img_s@1x-2.jpg 450w,
+                    ./img/team/img_s@2x-2.jpg 900w
                   "
                   media="(max-width: 767px)"
                   sizes="(min-width: 480px) 450px, 100vw"
                   type="image/jpeg"
                 />
                 <img
-                  src=".\img\team\img_s@1x-2.jpg "
+                  src="./img/team/img_s@1x-2.jpg "
                   alt="Mukola"
                   loading="lazy"
                 />
@@ -569,8 +569,8 @@
               <picture>
                 <source
                   srcset="
-                    .\img\team\img_l@1x-3.webp 270w,
-                    .\img\team\img_l@2x-3.webp 540w
+                    ./img/team/img_l@1x-3.webp 270w,
+                    ./img/team/img_l@2x-3.webp 540w
                   "
                   media="(min-width: 1200px)"
                   sizes="(min-width: 1200px) 270px"
@@ -578,8 +578,8 @@
                 />
                 <source
                   srcset="
-                    .\img\team\img_l@1x-3.jpg 270w,
-                    .\img\team\img_l@2x-3.jpg 540w
+                    ./img/team/img_l@1x-3.jpg 270w,
+                    ./img/team/img_l@2x-3.jpg 540w
                   "
                   media="(min-width: 1200px)"
                   sizes="(min-width: 1200px) 270px"
@@ -587,8 +587,8 @@
                 />
                 <source
                   srcset="
-                    .\img\team\img_m@1x-3.webp 354w,
-                    .\img\team\img_m@2x-3.webp 708w
+                    ./img/team/img_m@1x-3.webp 354w,
+                    ./img/team/img_m@2x-3.webp 708w
                   "
                   media="(min-width: 768px)"
                   sizes="(min-width: 768px) 354px"
@@ -596,8 +596,8 @@
                 />
                 <source
                   srcset="
-                    .\img\team\img_m@1x-3.jpg 354w,
-                    .\img\team\img_m@2x-3.jpg 708w
+                    ./img/team/img_m@1x-3.jpg 354w,
+                    ./img/team/img_m@2x-3.jpg 708w
                   "
                   media="(min-width: 768px)"
                   sizes="(min-width: 768px) 354px"
@@ -605,8 +605,8 @@
                 />
                 <source
                   srcset="
-                    .\img\team\img_s@1x-3.webp 450w,
-                    .\img\team\img_s@2x-3.webp 900w
+                    ./img/team/img_s@1x-3.webp 450w,
+                    ./img/team/img_s@2x-3.webp 900w
                   "
                   media="(max-width: 767px)"
                   sizes="(min-width: 480px) 450px, 100vw"
@@ -614,15 +614,15 @@
                 />
                 <source
                   srcset="
-                    .\img\team\img_s@1x-3.jpg 450w,
-                    .\img\team\img_s@2x-3.jpg 900w
+                    ./img/team/img_s@1x-3.jpg 450w,
+                    ./img/team/img_s@2x-3.jpg 900w
                   "
                   media="(max-width: 767px)"
                   sizes="(min-width: 480px) 450px, 100vw"
                   type="image/jpeg"
                 />
                 <img
-                  src=".\img\team\img_s@1x-3.jpg "
+                  src="./img/team/img_s@1x-3.jpg "
                   alt="Muhaylo"
                   loading="lazy"
                 />
