--- a/portfolio.html
+++ b/portfolio.html
@@ -170,7 +170,7 @@
                     </p>
                   </div>
                 </div>
-                <div class="grid__wrapper">
+                <div class="grid__wrapper grid__wrapper--big-padding">
                   <h2 class="grid__title">Технокряк</h2>
                   <p class="grid__description">Веб-сайт</p>
                 </div>
